Fixed typos in README template

--- a/templates/README.md.twig
+++ b/templates/README.md.twig
@@ -1,6 +1,6 @@
 # {{composer_name}}
 
-[Phergie](http://github.com/phergie/phergie-irc-bot-react/) phergie for {{purpose}}....
+[Phergie](http://github.com/phergie/phergie-irc-bot-react/) plugin for {{purpose}}.
 
 [![Build Status](https://secure.travis-ci.org/{{composer_name}}.png?branch=master)](http://travis-ci.org/{{composer_name}})
 
