Added documentation link to README

--- a/templates/README.md.twig
+++ b/templates/README.md.twig
@@ -16,7 +16,8 @@ The recommended method of installation is [through composer](http://getcomposer.
 }
 ```
 
-See Phergie documentation for more information on installing plugins.
+See Phergie documentation for more information on
+[installing and enabling plugins](https://github.com/phergie/phergie-irc-bot-react/wiki/Usage#plugins).
 
 ## Configuration
 
