Allow empty plugin config

--- a/templates/Plugin.php.twig
+++ b/templates/Plugin.php.twig
@@ -31,7 +31,7 @@ class Plugin extends AbstractPlugin
      *
      * @param array $config
      */
-    public function __construct(array $config)
+    public function __construct(array $config = array())
     {
 
     }
