--- a/templates/PluginTest.php.twig
+++ b/templates/PluginTest.php.twig
@@ -11,7 +11,7 @@
 namespace {{namespace}};
 
 use Phake;
-use Phergie\Irc\Event\EventInterface;
+use {{event_class_full}};
 use Phergie\Irc\Bot\React\EventQueueInterface;
 
 /**
