Updated PHPUnit to 4.1.x and Phake to 2.0.0-beta1 in composer.json template

--- a/templates/composer.json.twig
+++ b/templates/composer.json.twig
@@ -17,8 +17,8 @@
 
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*",
-        "phake/phake": "1.0.*"
+        "phpunit/phpunit": "4.1.*",
+        "phake/phake": "2.0.0-beta1"
     },
 {% if command_plugin %}
     "suggest": {
