--- a/templates/README.md.twig
+++ b/templates/README.md.twig
@@ -22,7 +22,7 @@ See Phergie documentation for more information on
 ## Configuration
 
 ```php
-new \{{namespace}}\Plugin(array(
+new \{{package_namespace}}\Plugin(array(
 
 
 
