--- a/templates/composer.json.twig
+++ b/templates/composer.json.twig
@@ -1,13 +1,13 @@
 {
     "name": "{{composer_name}}",
     "description": "Phergie plugin for {{purpose}}",
-    "keywords": [ "irc", "bot", "react", "plugin" ],
-    "license": "BSD-2-Clause",
+    "keywords": [ "phergie", "irc", "bot", "plugin" ],
+    "license": "{{license_value}}",
     "support": {
-        "email": "team@phergie.org",
+        "email": "{{author_email}}",
         "irc": "irc://irc.freenode.net/phergie",
-        "issues": "{{github_url}}/issues",
-        "source": "{{github_url}}"
+        "issues": "{{issues_url}}",
+        "source": "{{repo_url}}"
     },
     "minimum-stability": "dev",
     "require": {
