--- a/templates/LICENSE.twig
+++ b/templates/LICENSE.twig
@@ -1,4 +1,4 @@
-Copyright (c) {{ "now"|date("Y") }}, Phergie Team
+Copyright (c) {{copyright_years}}, {{author_name}}
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
