--- a/templates/composer.json.twig
+++ b/templates/composer.json.twig
@@ -29,5 +29,10 @@
         "psr-4": {
             "{{composer_namespace}}\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "{{composer_tests_namespace}}\\": "tests"
+        }
     }
 }
