--- a/templates/phpunit.xml.twig
+++ b/templates/phpunit.xml.twig
@@ -9,13 +9,13 @@
 >
     <testsuites>
         <testsuite name="{{composer_name}} test suite">
-            <directory>{{testsuite_dir}}</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>../src/</directory>
+            <directory>src/</directory>
         </whitelist>
     </filter>
 </phpunit>
