--- a/templates/composer.json.twig
+++ b/templates/composer.json.twig
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "phergie/phergie-irc-bot-react": "dev-master"{% if command_plugin %},
-        "phergie/phergie-irc-plugin-react-command": "dev-master"
+        "phergie/phergie-irc-plugin-react-command": "~1.0"
 {% endif %}
 
     },
