--- a/templates/composer.json.twig
+++ b/templates/composer.json.twig
@@ -11,7 +11,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "phergie/phergie-irc-bot-react": "dev-master"{% if command_plugin %},
+        "phergie/phergie-irc-bot-react": "~1"{% if command_plugin %},
         "phergie/phergie-irc-plugin-react-command": "~1.0"
 {% endif %}
 
