--- a/templates/phpunit.xml.twig
+++ b/templates/phpunit.xml.twig
@@ -6,6 +6,7 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="true"
+         bootstrap="vendor/autoload.php"
 >
     <testsuites>
         <testsuite name="{{composer_name}} test suite">
