#7 Created 'repo_owner' param (derived from 'repo_url') and used it (along with 'repo_name') to build urls for Travis CI.

--- a/templates/README.md.twig
+++ b/templates/README.md.twig
@@ -2,7 +2,7 @@
 
 [Phergie](http://github.com/phergie/phergie-irc-bot-react/) plugin for {{purpose}}.
 
-[![Build Status](https://secure.travis-ci.org/{{composer_name}}.png?branch=master)](http://travis-ci.org/{{composer_name}})
+[![Build Status](https://secure.travis-ci.org/{{repo_owner}}/{{repo_name}}.png?branch=master)](http://travis-ci.org/{{repo_owner}}/{{repo_name}})
 
 ## Install
 
