--- a/templates/.travis.yml.twig
+++ b/templates/.travis.yml.twig
@@ -11,8 +11,8 @@ matrix:
     - php: hhvm
 
 before_script:
-  - composer self-update
-  - composer install
+  - travis_retry composer self-update
+  - travis_retry composer install
 
 script:
   - ./vendor/bin/phpunit --coverage-text
