Updated scaffold template and app to PHP 5.4 syntax.
* Replaced long array syntax with short array syntax (in scaffold app and templates).
* Explicitly set min PHP version of scaffold app to 5.4.2 (prior to this change, the scaffold app would install and run but fail during composer install of the new plug-in).
* Added PHP 7 to Travis CI config template.
* Updated "Configuration" section of README template to a more complete snippet.

--- a/templates/README.md.twig
+++ b/templates/README.md.twig
@@ -22,11 +22,16 @@ See Phergie documentation for more information on
 ## Configuration
 
 ```php
-new \{{package_namespace}}\Plugin(array(
+return [
+    'plugins' => [
+        // configuration
+        new \{{package_namespace}}\Plugin([
 
 
 
-))
+        ])
+    ]
+];
 ```
 
 ## Tests
