--- a/templates/Plugin.php.twig
+++ b/templates/Plugin.php.twig
@@ -31,7 +31,7 @@ class Plugin extends AbstractPlugin
      *
      * @param array $config
      */
-    public function __construct(array $config = array())
+    public function __construct(array $config = [])
     {
 
     }
@@ -43,9 +43,9 @@ class Plugin extends AbstractPlugin
      */
     public function getSubscribedEvents()
     {
-        return array(
+        return [
             '{% if command_plugin %}command{% else %}irc{% endif %}.' => '{{handler_method}}',
-        );
+        ];
     }
 
     /**
