--- a/templates/.travis.yml.twig
+++ b/templates/.travis.yml.twig
@@ -1,14 +1,13 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7
-  - hhvm
+  - 7.1
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: nightly
 
 before_script:
   - travis_retry composer self-update
